# loglib

./: CMakeLists.txt  README.md
include/: log.h  testing_utilities.h
src/: log.c
test/: test_log.c  testing_utilities.c  testing_utilities.h
